WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260902
Nullptr crash with :has(~sibling) invalidation in shadow tree
https://bugs.webkit.org/show_bug.cgi?id=260902
Summary
Nullptr crash with :has(~sibling) invalidation in shadow tree
Antti Koivisto
Reported
2023-08-30 06:28:04 PDT
Turns out not all elements with siblings have a parent element.
Attachments
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2023-08-30 06:28:19 PDT
rdar://110129945
Antti Koivisto
Comment 2
2023-08-30 06:32:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17222
EWS
Comment 3
2023-08-30 08:45:49 PDT
Committed
267454@main
(82d7f771ca51): <
https://commits.webkit.org/267454@main
> Reviewed commits have been landed. Closing PR #17222 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug