Cherry-pick 82d7f771ca51. rdar://110129945

Nullptr crash with :has(~sibling) invalidation in shadow tree
    https://bugs.webkit.org/show_bug.cgi?id=260902
    rdar://110129945

    Reviewed by Chris Dumez.

    * LayoutTests/fast/has-sibling-without-parent-crash-expected.html: Added.
    * LayoutTests/fast/has-sibling-without-parent-crash.html: Added.
    * Source/WebCore/style/StyleInvalidator.cpp:
    (WebCore::Style::Invalidator::invalidateStyleWithMatchElement):

    Elements with siblings don't have a parent element when they are parented to a shadow root.

    Canonical link: https://commits.webkit.org/267454@main

Identifier: 265870.500@safari-7616-branch